[docs] Fix nested details toggle visibility scope
- Restrict content visibility selectors to direct children
  using the child combinator, preventing unintended cascade
  into nested collapsible sections within the details component

--- a/docs/site/assets/css/docs.scss
+++ b/docs/site/assets/css/docs.scss
@@ -1766,11 +1766,11 @@ a.comparison-table__module-proprietaryOkmeter::after {
     transform: rotate(0deg);
 }
 
-.docs .details .details__content {
+.docs .details > .details__content {
     display: none;
 }
 
-.docs .details.active .details__content {
+.docs .details.active > .details__content {
     display: block;
 }
 
